# pyproject.toml

[tool.poetry]
name = "kdkpbot"
version = "0.1.0"
description = "Telegram bot for L2 clan raid accounting"
authors = ["Novoselov Dmitrii <da.novoselov@ya.ru>"]
packages = [{ include = "kdkpbot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
python-telegram-bot = "20.7"
python-dotenv = ">=1.1.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
