# pyproject.toml

[project]
name = "kdkpbot"
version = "0.1.0"
description = "Telegram bot for Lineage 2 clan management"
authors = [
    { name = "Novoselov Dmitrii", email = "da.novoselov@ya.ru" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-telegram-bot==20.7",
    "python-dotenv>=1.1.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "kdkpbot", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
